# protean_dist_sim

./: .dockerignore  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  build.rs  build.sh  docker-compose.yml
deploy/: QUICK_START.md  README.md  config.yaml  coordinator_config.yaml  deploy-cloud.sh  deploy-local.sh  run.sh  test_plan.yaml
deploy/gcp/: GCP_DEPLOYMENT.md  README.md
deploy/gcp/gce/: cleanup-multi-vm.sh  deploy-multi-vm.sh
deploy/gcp/gke/: configmaps.yaml  coordinator-deployment.yaml  deploy.sh  namespace.yaml  persistent-volumes.yaml  services.yaml  worker-statefulset.yaml
src/: lib.rs
src/coordinator/: config.rs  constrained_kmeans.rs  coordinator.rs  dataloader.rs  dataset.rs  integration_tests.rs  mod.rs  service.rs  snapshot.rs  test_plan.rs  tests.rs
src/proto/: dist_sim.proto  onnx-ml.proto  protean.proto
src/worker/: actor.rs  mod.rs  worker.rs
src/worker/tests/: actor_tests.rs  churn_tests.rs  helpers.rs  integration_tests.rs  mod.rs  worker_tests.rs
tests/: config_integration_tests.rs
