[package]
name = "protean_dist_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
protean = { path = "../protean" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
dashmap = "6.1"
tracing = "0.1"
bincode = "1.3"
rand = "0.8"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[dev-dependencies]
tokio-test = "0.4"
