[package]
name = "protean_dist_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
protean = { path = "../protean" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
dashmap = "6.1"
tracing = "0.1"
tracing-subscriber = "0.3"
bincode = "1.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[dev-dependencies]
tokio-test = "0.4"

[features]
f32l2 = []
default = ["f32l2"]

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[[bin]]
name = "coordinator"
path = "src/bin/coordinator.rs"
